<resources>
    <string name="app_name">Travel-App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="trip">Trip</string>
    <string name="guide">Guide</string>
    <string name="trips">Trips</string>
    <string name="bookmark">Bookmark</string>
    <string name="trip_plan">Trip Plan</string>
    <string name="see_all"><u>See all</u></string>

    <string name="flights">Flights</string>
    <string name="hotels">Hotels</string>
    <string name="cars">Cars</string>
    <string name="taxi">Taxi</string>
    <string name="choose_trip_location">Choose Trip Location</string>
    <string name="choose_trip_date">Choose Trip Date</string>
    <string name="save">Save</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_enter_your_account_here">Please enter your account here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="google">Google</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_any_account">Don\'t have any account?</string>
    <string name="get_started">Get Started</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="by_clicking_register_button_you_are_accepting_terms_of_service_and_privacy_policy">By clicking register button you are accepting Terms of Service and Privacy Policy.</string>
    <string name="where_s_your_n_next_destination">Where\'s your\n next destination?</string>
    <string name="remove_bookmark">Remove Bookmark</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="days">days</string>
    <string name="images"> Images</string>
    <string name="must_see">MUST SEE</string>
    <string name="where_next">Where next?</string>
    <string name="places_to_go_before_you_die">PLACES TO GO BEFORE YOU DIE</string>
    <string name="deals">Deals</string>
    <string name="all">All</string>
    <string name="transportations">Transportations</string>
    <string name="top_destinations">TOP DESTINATIONS</string>
    <string name="nearby_attractions">NEARBY ATTRACTIONS</string>
    <string name="search_history">Search History</string>
    <string name="search_results">Search Results</string>

</resources>