<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/bottom_navigation_home_icon_selector"
        android:title="@string/home"
        app:exb_color="#FF4760" />

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/bottom_navigation_search_icon_selector"
        app:exb_color="#FF4760"/>

    <item
        android:id="@+id/trip"
        android:title="@string/trip"
        android:icon="@drawable/bottom_navigation_trip_icon_selector"
        app:exb_color="#FF4760"/>

    <item
        android:id="@+id/guide"
        android:title="@string/guide"
        android:icon="@drawable/bottom_navigation_guide_icon_selector"
        app:exb_color="#FF4760"/>

</menu>