<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_home_screen">

        <TextView
            android:id="@+id/LoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_110sdp"
            android:fontFamily="@font/inter"
            android:text="@string/welcome_back"
            android:textColor="@color/white"
            android:textSize="@dimen/_27ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:fontFamily="@font/inter"
            android:text="@string/please_enter_your_account_here"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginTitle" />

        <EditText
            android:id="@+id/editTextEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/edit_text_border"
            android:drawableStart="@drawable/ic_baseline_email"
            android:fontFamily="@font/inter"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewInfo" />

        <EditText
            android:id="@+id/editTextPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_border"
            android:drawableStart="@drawable/ic_baseline_lock"
            android:drawableEnd="@drawable/ic_baseline_show"
            android:fontFamily="@font/inter"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailLogin" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_70sdp"
            android:backgroundTint="@color/loginButtonColor"
            android:fontFamily="@font/inter"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_25sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogin" />

        <TextView
            android:id="@+id/textViewContinueWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/inter"
            android:text="@string/or_continue_with"
            android:textColor="@color/secondScreenInfoColor"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonGoogleLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:backgroundTint="@color/google_login_color"
            android:drawablePadding="@dimen/_100sdp"
            android:fontFamily="@font/inter"
            android:text="@string/google"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_25sdp"
            app:icon="@drawable/google_img"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewContinueWith" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_40sdp"
            app:layout_constraintTop_toBottomOf="@id/buttonGoogleLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_any_account"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:fontFamily="@font/inter" />

            <TextView
                android:id="@+id/textViewSignupNavigate"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/loginButtonColor"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                android:fontFamily="@font/inter" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>