<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_home_screen">

        <TextView
            android:id="@+id/RegisterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_160sdp"
            android:fontFamily="@font/inter"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="@dimen/_27ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextFullNameRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/edit_text_border"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawableTint="@color/register_icon_color"
            android:fontFamily="@font/inter"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RegisterTitle"
            android:autofillHints="name" />


        <EditText
            android:id="@+id/editTextEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_border"
            android:drawableStart="@drawable/ic_baseline_email"
            android:fontFamily="@font/inter"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFullNameRegister"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/editTextPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_border"
            android:drawableStart="@drawable/ic_baseline_lock"
            android:drawableEnd="@drawable/ic_baseline_show"
            android:fontFamily="@font/inter"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailRegister"
            android:importantForAutofill="no" />
        
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewRegisterInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_110sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/proximanovafont"
            android:text="@string/by_clicking_register_button_you_are_accepting_terms_of_service_and_privacy_policy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextPasswordRegister" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/loginButtonColor"
            android:fontFamily="@font/inter"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_25sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRegisterInfo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>