<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.trip.TripFragment">

        <TextView
            android:id="@+id/textViewTripPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:fontFamily="@font/source_sans_pro_bold"
            android:text="@string/trip_plan"
            android:textColor="#292C3D"
            android:textFontWeight="700"
            android:textSize="@dimen/_23ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineHeight="@dimen/_29sdp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayoutTrips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_11sdp"
            android:layout_marginEnd="@dimen/_90sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTripPlan"
            app:tabGravity="start"
            app:tabIconTint="@drawable/tab_content_color_selector"
            app:tabIndicator="@drawable/ic_custom_tab_indicator"
            app:tabIndicatorColor="#FF4760"
            app:tabInlineLabel="true"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="#FF4760"
            app:tabTextAppearance="@style/tab_text_trip"
            app:tabTextColor="#C2C5D6">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/tab_layout_trip_icon_selector"
                android:text="@string/trips" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/tab_layout_bookmark_icon_selector"
                android:text="@string/bookmark" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTripsBookmarks"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_438sdp"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_13sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayoutTrips" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fobAddTrip"
            android:layout_width="@dimen/_47sdp"
            android:layout_height="@dimen/_47sdp"
            android:layout_marginBottom="@dimen/_70sdp"
            android:src="@drawable/ic_add"
            app:backgroundTint="#FF4760"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/white" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>