<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.search.SearchFragment">

        <TextView
            android:id="@+id/textViewSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:fontFamily="@font/source_sans_pro_bold"
            android:text="@string/search"
            android:textColor="@color/page_title_color"
            android:textFontWeight="700"
            android:textSize="@dimen/_23ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineHeight="@dimen/_29sdp" />

        <LinearLayout
            android:id="@+id/linearLayoutSearchBar"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_edittext_search"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSearch">

            <ImageView
                android:id="@+id/buttonSearchHistory"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_4sdp"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_recent_history"
                app:tint="@color/pink"
                tools:ignore="ContentDescription" />


            <EditText
                android:id="@+id/editTextSearchSearchScreen"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="19"
                android:fontFamily="@font/source_sans_pro_regular"
                android:hint="@string/where_next"
                android:importantForAutofill="no"
                android:inputType="text"
                android:lineHeight="@dimen/_17ssp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textColorHighlight="@android:color/transparent"
                android:textColorHint="@color/search_hint_color"
                android:textColorLink="@android:color/transparent"
                android:textFontWeight="400"
                android:textSize="@dimen/_13ssp" />
            <ImageView
                android:id="@+id/buttonSearchSearchScreen"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_search_edittext"
                tools:ignore="ContentDescription" />
        </LinearLayout>


        <TextView
            android:id="@+id/textViewMustSee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:letterSpacing="-0.03"
            android:lineHeight="@dimen/_21ssp"
            android:text="@string/top_destinations"
            android:textColor="@color/page_title_color"
            android:textFontWeight="600"
            android:textSize="@dimen/_17ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutSearchBar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTopDestinations"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMustSee" />

        <TextView
            android:id="@+id/textViewNearbyAttractions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:letterSpacing="-0.03"
            android:lineHeight="@dimen/_21ssp"
            android:text="@string/nearby_attractions"
            android:textColor="@color/page_title_color"
            android:textFontWeight="600"
            android:textSize="@dimen/_17ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewTopDestinations" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewNearbyAttractions"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_300sdp"
            android:paddingBottom="@dimen/_69sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNearbyAttractions" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>